--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.contact-info {
+  display: flex;
+  align-items: center;
+  padding: 2rem;
+}
+
+.contact-info .bg-gray-200 {
+  background-color: #e2e8f0; /* Gray 200 */
+}
+
+.contact-info .rounded-full {
+  border-radius: 9999px; /* Large value to create a circle */
+}
+
+.contact-info .w-12 {
+  width: 3rem; /* Equivalent to width: 48px; */
+}
+
+.contact-info .h-12 {
+  height: 3rem; /* Equivalent to height: 48px; */
+}
+
+.contact-info .text-xl {
+  font-size: 1.25rem; /* Equivalent to 20px */
+}
+
+.contact-info .ml-4 {
+  margin-left: 1rem; /* Equivalent to margin-left: 16px; */
+}
+
+.contact-info h2 {
+  font-size: 1.5rem; /* Equivalent to 24px */
+  font-weight: 600; /* Equivalent to font-weight: bold; */
+}
+
+.contact-info p {
+  font-size: 1rem; /* Equivalent to 16px */
+}
 
 .sidebar {
   position: fixed;
@@ -23,6 +61,7 @@ code {
   height: 100%;
   background-color: #fff;
   transition: right 0.3s ease;
+  z-index: 1;
 }
 
 .sidebar ul {
